update dependencies; switch to junit